# ardu-pomodoro

./: .gitmodules  CMakeLists.txt  run.sh
gui-settings/include/core/: core.h  window.h
gui-settings/include/draw/: draw.h  tabs.h
gui-settings/include/input/: inputs.h
gui-settings/include/settings/: settings.h
gui-settings/src/core/: main.cpp  windown.cpp
gui-settings/src/draw/: tabs.cpp  toast.cpp
gui-settings/src/settings/: settings.cpp  stat.cpp
libs/: CMakeLists.txt
