cmake_policy(SET CMP0072 NEW)
set(OpenGL_GL_PREFERENCE GLVND)


add_subdirectory(glfw)

cmake_minimum_required(VERSION 3.15)
project(imgui)
set(IMGUI_SOURCES
   imgui/imgui.cpp
   imgui/imgui_draw.cpp
   imgui/imgui_tables.cpp
   imgui/imgui_widgets.cpp
   imgui/backends/imgui_impl_opengl3.cpp
   imgui/backends/imgui_impl_glfw.cpp

)
add_library(imgui STATIC ${IMGUI_SOURCES})
target_include_directories(imgui PUBLIC
   ${CMAKE_CURRENT_SOURCE_DIR}/imgui
   ${CMAKE_CURRENT_SOURCE_DIR}/imgui/backends
)
find_package(glfw3 REQUIRED)
target_link_libraries(imgui PUBLIC glfw)
